<resources>
    <string name="app_name">Blackjack</string>

    <!--
        ImageView contentDescription
    -->
    <string name="todo">TODO</string>

    <!--  BootupActivity  -->
    <string name="bootup_sub_title">[Version 1.0] | Developed by Matt Fung</string>
    <string name="action_skip">Skip Animation</string>

    <!-- MainActivity   -->
    <string name="main_activity_name">Menu</string>
    <string name="menu_title">Blackjack</string>
    <string name="menu_start">Start Game</string>
    <string name="menu_continue">Continue Game</string>
    <string name="menu_restart">Restart Game</string>
    <string name="menu_options">Options</string>
    <string name="menu_help">Help</string>

    <!--  MainActivity Menu  -->
    <string name="action_user_picture">Picture</string>
    <string name="action_display_user">Login</string>
    <string name="action_log_in">Login</string>
    <string name="action_create_user">Create user</string>
    <string name="action_view_profile">View profile</string>
    <string name="action_edit_user">Edit profile</string>
    <string name="action_sign_out">Sign out</string>

    <!-- UserLoginActivity   -->
    <string name="login_activity_name">Login</string>
    <string name="login_title">Welcome back!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_create_user">Create User</string>

    <!-- CreateUserActivity   -->
    <string name="create_user_activity_name">Create User</string>
    <string name="edit_user_activity_name">Edit User</string>
    <string name="text_enter_username">Enter Username (Max 16 Char)</string>
    <string name="hint_username_limit">Type Here</string>
    <string name="text_enter_password">Enter Password (Max 16 Char)</string>
    <string name="hint_password_limit">Must contain number</string>
    <string name="text_reenter_password">Re-Enter Password</string>
    <string name="text_enter_new_username">Enter New Username (Max 16 Char)</string>
    <string name="text_enter_new_password">Enter New Password (Max 16 Char)</string>
    <string name="btn_create_user">Create User</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_select_photo">Select Photo</string>
    <string name="btn_delete_user">Delete User</string>
    <string-array name="photo_options">
        <item>Choose photo from gallery</item>
        <item>Take photo with camera</item>
    </string-array>
    <string name="title_select_photo_alert_dialog">Select Photo Option</string>
    <string name="empty_string" />
    <string name="invalid_empty_username">Username cannot be empty</string>
    <string name="invalid_username_contains_space">Username cannot contain spaces</string>
    <string name="invalid_username_taken">Username unavailable</string>
    <string name="valid_username">Username available</string>
    <string name="invalid_empty_password">Password cannot be empty</string>
    <string name="invalid_password_contains_space">Password cannot contain spaces</string>
    <string name="invalid_password_no_number">Password must contain a number</string>
    <string name="valid_password">Password valid</string>
    <string name="invalid_re_password">Passwords do not match</string>
    <string name="valid_re_password">Passwords match</string>
    <string name="toast_invalid_input">Cannot create user</string>
    <string name="toast_user_created">User created</string>
    <string name="toast_invalid_input_edit">Cannot save changes</string>
    <string name="toast_changes_saved">Changes saved</string>
    <string name="toast_user_deleted">User deleted</string>
    <string name="empty_file_path" />

    <!--  UserLoginActivity  -->
    <string name="invalid_credentials_empty">Credentials cannot be empty</string>
    <string name="invalid_user_dne">User does not exist</string>
    <string name="invalid_password">Invalid password</string>
    <string name="toast_login_successful">Login successful</string>
    <string name="toast_logout_successful">Logout successful</string>

    <!--  ViewProfileActivity  -->
    <string name="view_profile_activity_name">View Profile</string>
    <string name="display_label_user_stats">User Statistics</string>
    <string name="display_most_money_won">Most money won in a game: $%.2f</string>
    <string name="display_most_money_lost">Most money lost in a game: $%.2f</string>
    <string name="display_games_won">Number of games won: %d</string>
    <string name="display_games_lost">Number of games lost: %d</string>
    <string name="display_games_forfeited">Number of games forfeited: %d</string>
    <string name="display_bankrupts">Number of times gone bankrupted: %d</string>
    <string name="display_label_all_time_stats">All-Time Statistics</string>
    <string name="display_most_money_won_all_time">Most money won in a game (any user): $%.2f %s</string>
    <string name="display_most_money_lost_all_time">Most money lost in a game (any user): $%.2f %s</string>
    <string name="display_most_money_won_all_time_default">Most money won in a game (any user): $0 (No record yet)</string>
    <string name="display_most_money_lost_all_time_default">Most money lost in a game (any user): $0 (No record yet)</string>
    <string name="display_label_user_details">User Details</string>
    <string name="display_username">Username: %s</string>
    <string name="display_balance">Balance: $%.2f</string>

    <!--  OptionsActivity  -->
    <string name="options_activity_name">Options</string>
    <string name="text_label_current_options">Current settings configured for: %s</string>
    <string name="text_label_current_options_default">Current settings configured for: (No User Logged In)</string>
    <string name="text_label_num_decks">Select Number of Decks</string>
    <string name="text_label_card_design">Select Card Design Color</string>
    <string name="toast_changes_saved_options">Changes saved for next game</string>
    <string name="toast_user_reset">User Data Cleared</string>
    <string name="toast_default_reset">Data Cleared</string>
    <string name="btn_clear_data">Clear Data</string>

    <!--  GameActivity  -->
    <string name="game_activity_name">Blackjack</string>
    <string name="btn_hit">Hit</string>
    <string name="btn_stand">Stand</string>
    <string name="text_dealer_score">Dealer Score: %d</string>
    <string name="text_dealer_score_default">Dealer Score: 0</string>
    <string name="text_user_score">User Score: %d</string>
    <string name="text_user_bet">Bet: $%.0f</string>
    <string name="text_user_balance">Balance: $%.0f</string>
    <string-array name="game_instructions">
        <item name="select_bet">Select a bet: Click on one of the four betting chips</item>
        <item name="user_gameplay">User\'s Turn: Click on hit to draw a card or on stand to end turn</item>
        <item name="dealer_gameplay">Dealer\'s Turn: Making a decision…</item>
        <item name="dealer_done">Dealer\'s Turn: Done making a decision</item>
    </string-array>
    <string name="result_win">User wins - you win $%.0f</string>
    <string name="result_loss">Dealer wins - you lose $%.0f</string>
    <string name="result_push">Push - Bet returned to user</string>
    <string name="toast_invalid_bet">You do not have enough money. Choose another bet</string>

    <!--  HelpActivity  -->
    <string name="help_activity_name">Help</string>
    <string name="display_label_game_rules">Rules</string>
    <string name="display_game_rules">
        The motive of the game is to beat the dealer by getting a hand of cards where the count is as close to 21 as
        possible. The player will start off by selecting a bet of $10, $25, $50 or $100. Once a bet is selected, both the
        user and dealer will start off with two cards. The dealer\'s first card will be hidden so the player will only know
        the count of one of the dealer\'s cards. The player can then begin their turn by deciding whether they are
        satisfied with their card count or not. If the player decides that the card count is too low, they can press HIT
        to get a card. If the count of the player\'s hand is over 21, the player will lose right away. Once the player is
        satisfied with their hand, they can press STAND to end their turn. Once the player\'s turn ends, the dealer\'s
        hidden card will be revealed. Here on, the dealer will decide whether or not to draw more cards or not. If
        the dealer\'s count is higher than the player\'s count, the dealer will win. If both the dealer and player end with
        the same card count, the result will be a push. (a draw) Else, if the dealer\'s count is lower than the player\'s
        count, the player will win.
    </string>
    <string name="display_label_outcomes">Outcomes</string>
    <string name="display_outcome_win_regular"> Win (Regular): Gain 2x bet amount</string>
    <string name="display_outcome_win_blackjack">Win (Blackjack): \nGain 2.5x bet amount</string>
    <string name="display_outcome_push">Push: \nBet returned</string>
    <string name="display_outcome_loss">Loss: \nLose bet amount</string>
    <string name="display_label_credits">Credits</string>
    <string name="start_icon"><a href="https://www.pinclipart.com/picdir/middle/108-1088777_icons-button-start-menu-off-transprent-png-help.png">Start Icon</a></string>
    <string name="options_icon"><a href="https://mpng.subpng.com/20180420/tqw/kisspng-maintenance-computer-icons-car-motor-vehicle-servi-5ada5a393fc9c0.9785021515242593852613.jpg">Options Icon</a></string>
    <string name="help_icon"><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Noun_Project_question_mark_icon_1101884_cc.svg/1024px-Noun_Project_question_mark_icon_1101884_cc.svg.png">Help Icon</a></string>
    <string name="card_images"><a href="http://acbl.mybigcommerce.com/clip-art-tournament/">Playing Cards Sprites</a></string>
    <string name="chips_images"><a href="https://www.gameprogrammingcourse.com/?page_id=168">Betting Chips Sprites</a></string>
    <string name="display_developer"><a href="https://github.com/mattfung99">Developed by Matt Fung 2021</a></string>

    <!--  ResultFragment  -->
    <string name="result_fragment_title">Game Over</string>
    <string name="btn_positive">Leave</string>
    <string name="btn_negative">New game</string>

    <!--  RestartFragment  -->
    <string name="restart_fragment_message">
        Restarting a game will count as a forfeit.
        \n\nAre you sure you want to restart the game?
    </string>
    <string name="restart_fragment_message_default">
        \nAre you sure you want to restart the game?
    </string>

    <!--  OptionsFragment  -->
    <string name="options_fragment_message">
        Clearing data will result in resetting this user\'s current game, stats, balance, and configurations to default.
        \n\nNote: If this user currently holds a record for any All-Time statistic, the user will continue to hold
        that record even after the data is cleared.
        \n\nAre you sure you want to clear data?
    </string>
    <string name="options_fragment_message_default">
        Clearing data will result in resetting the current game, balance, and configurations to default.
        \n\nAre you sure you want to clear data?
    </string>

    <!--  DeckTesterActivity  -->
    <string name="deck_tester_activity_name">Deck Tester</string>
    <string name="test_display_card_name">Card: %s</string>
    <string name="test_draw">Draw card</string>

    <!--  GameTesterActivity  -->
    <string name="game_tester_activity_name">Game Tester</string>
    <string name="test_display_card_name_default">Card: (none)</string>
</resources>